experiments/reduced_gravity/build/genmake.log
Get compiler version using: gfortran --version
/opt/homebrew/bin/gfortran
GNU Fortran (Homebrew GCC 15.1.0) 15.1.0
Copyright (C) 2025 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

<-- compiler version ----

running: check_fortran_compiler
 gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -c genmake_tcomp.f
 gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -o genmake_tcomp genmake_tcomp.o -L/opt/homebrew/Cellar/netcdf-fortran/4.6.2/lib -lnetcdff -lnetcdf
ld: library 'netcdf' not found
collect2: error: ld returned 1 exit status

 Warning: FORTRAN compiler test fails to link
 --> set FC_CHECK= 1 /5

running: look_for_makedepend()
 --> set MAKEDEPEND=$(TOOLSDIR)/xmakedepend

running: check_HAVE_CLOC()
gcc -c genmake_tc_1.c
gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -o genmake_tc genmake_tc_2.for genmake_tc_1.o
  HELLO WORLD   1765330568.9930420     
 --> set HAVE_CLOC='t'

running: check_HAVE_SETRLSTK()
gcc -c genmake_tc_1.c
      program hello
      external setrlstk
      call setrlstk()
      end
gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -o genmake_tc genmake_tc_2.for genmake_tc_1.o
 --> set HAVE_SETRLSTK='t'

running: check_HAVE_SIGREG()
gcc -c genmake_tc_1.c
In file included from genmake_tc_1.c:6:
/Library/Developer/CommandLineTools/SDKs/MacOSX14.5.sdk/usr/include/ucontext.h:51:2: error: The deprecated ucontext routines require _XOPEN_SOURCE to be defined
   51 | #error The deprecated ucontext routines require _XOPEN_SOURCE to be defined
      |  ^
genmake_tc_1.c:11:44: warning: declaration of 'struct ucontext' will not be visible outside of this function [-Wvisibility]
   11 |     unsigned int sn, siginfo_t  si, struct ucontext *sc )
      |                                            ^
1 warning and 1 error generated.
      program hello
      integer anint
      common /iv/ anint
      external sigreg
      call sigreg(anint)
      end
gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -o genmake_tc genmake_tc_2.for genmake_tc_1.o
ld: file cannot be open()ed, errno=2 path=genmake_tc_1.o in 'genmake_tc_1.o'
collect2: error: ld returned 1 exit status
 --> set HAVE_SIGREG=''

running: check_HAVE_STAT()
gcc -c genmake_tc_1.c
      program hello
      integer nbyte
      call tfsize(nbyte)
      print *," HELLO WORLD", nbyte
      end
gfortran -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -o genmake_tc genmake_tc_2.for genmake_tc_1.o
 --> set HAVE_STAT='t'

running: check_netcdf_libs()
===  genmake_tnc.F  >>>
      program fgennc
#include "netcdf.inc"
      integer iret, ncid, xid
      iret = nf_create('genmake_tnc.nc', NF_CLOBBER, ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_def_dim(ncid, 'X', 11, xid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_close(ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      end
<<<  genmake_tnc.F  ===
cat genmake_tnc.F |  /usr/bin/cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_STAT -I/opt/homebrew/Cellar/netcdf-fortran/4.6.2/include
gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -c genmake_tnc.for  \ 
  &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -o genmake_tnc genmake_tnc.o -L/opt/homebrew/Cellar/netcdf-fortran/4.6.2/lib -lnetcdff -lnetcdf
ld: library 'netcdf' not found
collect2: error: ld returned 1 exit status

==> try again with added '-lnetcdf'
cat genmake_tnc.F |  /usr/bin/cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_STAT -I/opt/homebrew/Cellar/netcdf-fortran/4.6.2/include > genmake_tnc.for \ 
 &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -c genmake_tnc.for \ 
 &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -o genmake_tnc genmake_tnc.o -L/opt/homebrew/Cellar/netcdf-fortran/4.6.2/lib -lnetcdff -lnetcdf -lnetcdf
ld: warning: ignoring duplicate libraries: '-lnetcdf'
ld: library 'netcdf' not found
collect2: error: ld returned 1 exit status

==> try again with added '-lnetcdff -lnetcdf'
cat genmake_tnc.F |  /usr/bin/cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_STAT -I/opt/homebrew/Cellar/netcdf-fortran/4.6.2/include > genmake_tnc.for \ 
 &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -c genmake_tnc.for \ 
 &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -o genmake_tnc genmake_tnc.o -L/opt/homebrew/Cellar/netcdf-fortran/4.6.2/lib -lnetcdff -lnetcdf -lnetcdff -lnetcdf
ld: warning: ignoring duplicate libraries: '-lnetcdf', '-lnetcdff'
ld: library 'netcdf' not found
collect2: error: ld returned 1 exit status
 --> set HAVE_NETCDF=''

running: check_HAVE_FLUSH()
===  genmake_tflsh.for  >>>
      program fgenflsh
      integer iounit
      character*9 fname
      iounit = 26
      fname = 'tmp.tflsh'
      open(iounit,FILE=fname,STATUS='unknown')
      write(iounit,*) 'genmake_tflsh: hello'
      call flush(iounit)
      close(iounit)
      end
<<<  genmake_tflsh.for  ===
gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -c genmake_tflsh.for  \ 
  &&  gfortran  -fconvert=big-endian -fallow-argument-mismatch -Wunused -Wuninitialized -O3 -ftree-vectorize -funroll-loops -o genmake_tflsh.o -L/opt/homebrew/Cellar/netcdf-fortran/4.6.2/lib -lnetcdff -lnetcdf
ld: library 'netcdf' not found
collect2: error: ld returned 1 exit status
 --> set HAVE_FLUSH='f'
